[package]
name = "bx402"
version = "0.1.0"
edition = "2024"
description = "Micropayment proxy for the Brave Search API over x402 and MPP"
license = "MPL-2.0"
publish = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
